updated db be a fe

--- a/env.example
+++ b/env.example
@@ -1,5 +1,8 @@
-# Backend API URL
-REACT_APP_API_URL=http://localhost:5000
+# Backend API URL (for local development)
+# REACT_APP_API_URL=http://localhost:5001
+
+# For Railway deployment (production)
+REACT_APP_API_URL=https://notechat-backend-production.up.railway.app
 
 # For production, use your deployed backend URL
 # REACT_APP_API_URL=https://your-backend-domain.com 
