--- a/.env
+++ b/.env
@@ -1,2 +1,11 @@
 PORT = 3010
 BACKEND_URL="http://localhost:5010"
+
+# Backend API URL (for local development)
+# REACT_APP_API_URL=http://localhost:5001
+
+# For Railway deployment (production)
+REACT_APP_API_URL=https://notechat-backend-production.up.railway.app
+
+# For production, use your deployed backend URL
+# REACT_APP_API_URL=https://your-backend-domain.com 
